Make sure that a nullptr connection is not accessed in AccountEmoticonModel

I don't think it possible to open settings without an account connected anymore, however just to make sure I've made sure that a nullptr connection is handled in `AccountEmoticonsModel`.

BUG: 478024